import "dccl/option_extensions.proto";

package goby.moos.protobuf;

message DesiredCourse
{
    option (dccl.msg).unit_system = "si";

    required double time = 1 [(dccl.field).units.derived_dimensions = "time"];
    optional double heading = 2 [default = 0,
       	     (dccl.field).units.derived_dimensions = "plane_angle",
	     (dccl.field).units.system = "angle::degree"];
    optional double speed = 3 [default = 0, (dccl.field).units.derived_dimensions = "length/time"];
    optional double depth = 4 [default = 0, (dccl.field).units.derived_dimensions = "length"];
    optional double pitch = 5 [default = 0,
    	     (dccl.field).units.derived_dimensions = "plane_angle",
	     (dccl.field).units.system = "angle::degree"];

    optional double roll = 6 [default = 0,
             (dccl.field).units.derived_dimensions = "plane_angle",
	     (dccl.field).units.system = "angle::degree"];
	     
    optional double z_rate = 7 [default = 0, (dccl.field).units.derived_dimensions = "length/time"];
    optional double altitude = 8 [default = 10, (dccl.field).units.derived_dimensions = "length"];

    extensions 1000 to max;
}
